--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        
+        <div class="container">
+            <div class="main-cont">
+                <ul>
+                    
+                </ul>
+            </div>
+        </div>
 
 
 
